--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-openai==1.66.2
-langchain==0.3.20
-langchain-openai==0.3.8
+openai==1.13.3
+langchain==0.1.11
+langchain-openai==0.0.8
 python-dotenv==1.0.1
-faiss-cpu==1.10.0
-langchain-community==0.3.19
-pypdf==5.3.1
+langchainhub==0.1.15
+pandas==2.2.2
