--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-# Fill in your GCP project info and rename this file to ".env".
 OPENAI_API_KEY=
-
-GOOGLE_GENAI_USE_VERTEXAI=1
-GOOGLE_CLOUD_PROJECT=<your_project_name>
-GOOGLE_CLOUD_LOCATION=<your_project_location>
-GOOGLE_CLOUD_STORAGE_BUCKET=<your-storage-bucket>  # Only required for deployment on Agent Engine
+GOOGLE_API_KEY=
+OPENAI_API_KEY=
+EXA_API_KEY=
+SERPAPI_KEY=
+ANTHROPIC_API_KEY=
+DEEPSEEK_API_KEY=
+TAVILY_API_KEY=
