--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-openai==1.13.3
-langchain==0.1.11
-langchain-openai==0.0.8
-python-dotenv==1.0.1
-langchainhub==0.1.15
-pandas==2.2.2
+fastapi
+uvicorn
+requests
+langchain
+langchain-openai
+langchain-community
+python-dotenv
+tavily-python
+langchainhub
+httpcore==0.15.0
+httpx==0.23.0
